valueOf, heap memory